--- a/src/App.css
+++ b/src/App.css
@@ -11,20 +11,29 @@ img {
 .series_all_inner {
   position: relative;
   padding:0 60px;
-  cursor: pointer;
+
 }
 
-.series_all_inner img {
+.inner_container {
+  cursor: pointer;
   width: 100%;
 }
 
-.DetailToBtn {
-  position: absolute;
+.inner_container_img {
+  overflow: hidden;
   width: 100%;
-  height: 100%;
-  z-index: 3;
-  cursor: pointer;
 }
+
+.inner_container_img:hover img {
+  transform: scale(1.1);
+  transition-duration: .3s;
+}
+
+.inner_container_img img {
+  width: 100%;
+  transition-duration: .3s;
+}
+
 
 .series_all_title {
   font-size: 20px;
@@ -69,11 +78,14 @@ img {
 .series_outer {
   width: 80%;
   margin:0 auto;
+  background-color: #fff;
+  padding-bottom: 80px;
 }
 
 .modal_1 {
   width: 100%;
-  position: fixed;
+  height:auto;
+  position: absolute;
   top:0;
   right:0;
   left:0;
