--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,7 @@ img {
 .inner_container_img {
   overflow: hidden;
   width: 100%;
+  cursor: pointer;
 }
 
 .inner_container_img:hover img {
@@ -148,14 +149,14 @@ img {
 
 .startBtn {
   cursor: pointer;
-  background-color: #202020;
-  color:#fff;
+  background-color: #FCDE4C;
+  color:#202020;
   padding:10px 20px;
   font-size: 18px;
   text-align: center;
   border-radius: 5px;
   transition: .3s;
-  border:1px solid #202020;
+  border:1px solid #FCDE4C;
 }
 
 .startBtn:hover {
