--- a/src/App.css
+++ b/src/App.css
@@ -77,7 +77,7 @@ img {
 }
 
 .series_outer {
-  width: 80%;
+  width: 100%;
   margin:0 auto;
   background-color: #fff;
   padding-bottom: 80px;
@@ -96,8 +96,16 @@ img {
 
 }
 
-.series_inner {
+.series_middle {
   width: 100%;
+  background: #FBFBFB;
+  padding:40px 0;
+  border-bottom: 1px solid silver;
+  margin-bottom: 40px;
+}
+
+.series_inner {
+  width: 80%;
   margin:0 auto 10px;
   display:-webkit-box;
   display:-webkit-flex;
@@ -156,18 +164,17 @@ img {
   text-align: center;
   border-radius: 5px;
   transition: .3s;
-  border:1px solid #FCDE4C;
 }
 
 .startBtn:hover {
-  background-color: #fff;
-  border:1px solid #202020;
+  background-color: rgba(100,100,100,0.3);
   color:#202020;
   transition: .3s;
 }
 
 .series_detail {
-  width: 100%;
+  width: 80%;
+  margin:0 auto;
 }
 
 .series_detail_inner {
@@ -181,8 +188,12 @@ img {
   -webkit-align-items:center;
   -ms-flex-align:center;
   align-items:center;
+  -webkit-box-pack:justify;
+-webkit-justify-content:space-between;
+-ms-flex-pack:justify;
+justify-content:space-between;
   position: relative;
-  padding:5px 0;
+  padding:20px 0;
 }
 
 .series_dewtail_inner_img {
@@ -194,19 +205,31 @@ img {
 }
 
 .series_detail_inner p {
-  margin-left: 30px;
+  margin-left: 50px;
+}
+
+.series_detail_inner_l {
+  display:-webkit-box;
+  display:-webkit-flex;
+  display:-ms-flexbox;
+  display:flex;
+  -webkit-box-align:center;
+  -webkit-align-items:center;
+  -ms-flex-align:center;
+  align-items:center;
 }
 
 .BookToBtn {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  z-index: 3;
+  padding: 10px 70px;
+  background-color: #FCDE4C;
   cursor: pointer;
+  border-radius: 10px;
+  transition: .3s;
 }
 
 .BookToBtn:hover {
   background-color: rgba(100,100,100,0.3);
+  transition: .3s;
 }
 
 .modal_2 {
@@ -239,6 +262,10 @@ img {
   -ms-flex-align:center;
   align-items:center;
   color:dimgrey;
+}
+
+.bg_color {
+  background-color: #FBFBFB;
 }
 
 .guide p {
@@ -290,11 +317,12 @@ img {
 
 .modal-close-btn i.back {
   cursor: pointer;
+  font-size: 30px;
 }
 
 .btn_div {
   width:100%;
-  margin:15px 0;
+  padding:15px 0;
 }
 
 .slick-prev,.slick-next {
